DuPont DevSB/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AccessType__c</fullName>
        <description>Access Type - defines control for user access &amp; provisioning to Salesforce-SFDC</description>
        <inlineHelpText>Access Type - defines control for user access &amp; provisioning to Salesforce-SFDC</inlineHelpText>
        <label>Access Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont</fullName>
                </value>
                <value>
                    <fullName>DuPont-2</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Integrator</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Static</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Level__c</fullName>
        <description>The amount or level after which the item must be routed to a manager for approval.</description>
        <inlineHelpText>The amount or level after which the item must be routed to a manager for approval.</inlineHelpText>
        <label>Approval Level</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <description>Used to identify the &quot;role&quot; of the person who is in the Manager field for this user - as used in the Approval Workflow process.  The values in this field are used when you build the Approval process entry criteria.</description>
        <inlineHelpText>This field is used as entry criteria for the Approval Process. If you need more information about using this field, please contact Jan Watson 992-2082</inlineHelpText>
        <label>Approver Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appl Engr in Progress</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>District Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Estimation in process</fullName>
                </value>
                <value>
                    <fullName>Market Sales Manager</fullName>
                </value>
                <value>
                    <fullName>MTE Group</fullName>
                </value>
                <value>
                    <fullName>National Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Pricing in process</fullName>
                </value>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Requester Preparation</fullName>
                </value>
                <value>
                    <fullName>Technical Supervisor</fullName>
                </value>
                <value>
                    <fullName>Vice President</fullName>
                </value>
                <value>
                    <fullName>Work Request Manager</fullName>
                </value>
                <value>
                    <fullName>Zone Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approving_Business__c</fullName>
        <description>Track the business that should approve this user during the Annual User Review process</description>
        <label>Approving Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>Corporate - CS</fullName>
                </value>
                <value>
                    <fullName>Corporate - IT</fullName>
                </value>
                <value>
                    <fullName>Protection Technologies</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assign_Business_User__c</fullName>
        <formula>IF( INCLUDES( SpecialRights__c , &quot;Assign Business User&quot;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign Business User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCCEmail__c</fullName>
        <description>enables sending bulk Email as BCC from a Contact list view</description>
        <inlineHelpText>bulk email from Contact list view permission</inlineHelpText>
        <label>BCCEmail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visibility</fullName>
                </value>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Visibility with Fax</fullName>
                </value>
                <value>
                    <fullName>Ownership with Fax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Describes special user or access information</description>
        <label>Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuPont_Responsible_Contact__c</fullName>
        <description>Name of the DuPont employee responsible for this external partner account</description>
        <label>DuPont Responsible Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPass_ID__c</fullName>
        <description>Positive identification of individuals accessing DuPont computer systems.</description>
        <label>E-Pass ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_Analytics_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Description: Identifies if user has Einstein Analytics license</description>
        <label>Einstein Analytics Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DuPont Employee</fullName>
                </value>
                <value>
                    <fullName>Non-Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>SAP Partner Code / User ID (sales rep, CSR, etc.) of this user and is the unique record identifier for this person from SAP.</description>
        <externalId>true</externalId>
        <inlineHelpText>SAP Partner Code / User ID (sales rep, CSR, etc.) of this user and is the unique record identifier for this person from SAP.</inlineHelpText>
        <label>External ERP ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Kevlar_User_Region__c</fullName>
        <label>Kevlar User Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_User_Lookup__c</fullName>
        <description>The Business Key User responsible for this user</description>
        <label>Key User Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Key_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <relationshipName>Key_User</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Key_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Identify the SFDC Key Users</description>
        <inlineHelpText>Used to Identify the SFDC Key Users</inlineHelpText>
        <label>Key User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run LOOPlus on a staging environment when testing is available. When enabled, the LOOPlus page will take slightly longer to load.</inlineHelpText>
        <label>Drawloop Next Release Test User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_S_Business_IT_Lead__c</fullName>
        <description>The Marketing &amp; Sales IT responsible for this user&apos;s Business.</description>
        <label>M&amp;S Business IT Lead</label>
        <relationshipName>M_S_Business_IT_Lead</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Months_Count__c</fullName>
        <description>Number of months SFDC subscription prorated for current year (NO LONGER USED)</description>
        <label>Months Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, SFDC is an approved asset for this user (as per MyAcess)</description>
        <inlineHelpText>If checked, SFDC is an approved asset for this user</inlineHelpText>
        <label>MyAccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Restriction_Destination_Kevlar__c</fullName>
        <label>No Restriction Destination Kevlar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Work_for_Kevlar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>North Korea</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Slovenia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_SFDC_c__c</fullName>
        <description>Other SFDC Instances to which this user has access</description>
        <inlineHelpText>SFDC Instances</inlineHelpText>
        <label>Other_SFDC__c</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AgCRM</fullName>
                </value>
                <value>
                    <fullName>Ag UTIL</fullName>
                </value>
                <value>
                    <fullName>DuPont Tools</fullName>
                </value>
                <value>
                    <fullName>DuPont Utility</fullName>
                </value>
                <value>
                    <fullName>EC CRM</fullName>
                </value>
                <value>
                    <fullName>IB CRM</fullName>
                </value>
                <value>
                    <fullName>MS CRM</fullName>
                </value>
                <value>
                    <fullName>MS UTIL</fullName>
                </value>
                <value>
                    <fullName>NH CRM</fullName>
                </value>
                <value>
                    <fullName>Pioneer-EMEA</fullName>
                </value>
                <value>
                    <fullName>PS CRM</fullName>
                </value>
                <value>
                    <fullName>SPECUtil</fullName>
                </value>
                <value>
                    <fullName>SS CRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_GL_Number__c</fullName>
        <description>The charge code (general ledger-subaccount-detail code) to which the user license is assigned.</description>
        <label>GL Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivacyAgreementDate__c</fullName>
        <description>Date to indicate the privacy agreedment has been agreed.</description>
        <inlineHelpText>Date to indicate the privacy agreedment has been agreed.</inlineHelpText>
        <label>Privacy Agreement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>This is the Salesforce.com program that the end user is associated with.  It is used for reporting, etc.</description>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-AP</fullName>
                </value>
                <value>
                    <fullName>BI-EMEA</fullName>
                </value>
                <value>
                    <fullName>BI-LA</fullName>
                </value>
                <value>
                    <fullName>BI-NA</fullName>
                </value>
                <value>
                    <fullName>COB</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DIMC</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-CHINA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-EAST ASIA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-EMEA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-LA</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids-NA</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP-EMEA</fullName>
                </value>
                <value>
                    <fullName>DPT-IPP-NA</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW-EMEA</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW-LA</fullName>
                </value>
                <value>
                    <fullName>DPT-NOW-PH</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT-CORP</fullName>
                </value>
                <value>
                    <fullName>IT-eBusiness</fullName>
                </value>
                <value>
                    <fullName>M&amp;S-IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reactivation_Count__c</fullName>
        <description>This is the number of times that the User account has been Reactivated (and then reinstated)</description>
        <label>Reactivation Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Restrictive_Destination_Kevlar__c</fullName>
        <label>Restrictive Destination Kevlar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Work_for_Kevlar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>North Korea</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Slovenia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_in_Kevlar__c</fullName>
        <label>Role in Kevlar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Export Control</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Market Communications</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <description>This is the DuPont Sales Region  that the User represents.</description>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agrosan-Mexico</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>APEJ</fullName>
                </value>
                <value>
                    <fullName>ARG</fullName>
                </value>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>BENE</fullName>
                </value>
                <value>
                    <fullName>BRA</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Canada - Liquid</fullName>
                </value>
                <value>
                    <fullName>Canada - Powder</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>DACH</fullName>
                </value>
                <value>
                    <fullName>Ducor-Mexico</fullName>
                </value>
                <value>
                    <fullName>Duwest-Caribbean</fullName>
                </value>
                <value>
                    <fullName>Duwest-Central America</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Eastern US</fullName>
                </value>
                <value>
                    <fullName>ESP</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>FRA</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Gea-Colombia</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>GRE</fullName>
                </value>
                <value>
                    <fullName>HDT</fullName>
                </value>
                <value>
                    <fullName>ITA</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sensitive_Destination_Kevlar__c</fullName>
        <label>Sensitive Destination Kevlar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Work_for_Kevlar__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Mexico</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>North Korea</fullName>
                </value>
                <value>
                    <fullName>Pakistan</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Slovenia</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialRights__c</fullName>
        <label>SpecialRights</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assign Business User</fullName>
                </value>
                <value>
                    <fullName>Opt-In Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Region__c</fullName>
        <description>Region that receives the billing for the SFDC subscription.</description>
        <inlineHelpText>For Finance use only</inlineHelpText>
        <label>Sponsor Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>AP-APEJ</fullName>
                </value>
                <value>
                    <fullName>AP-AUS</fullName>
                </value>
                <value>
                    <fullName>AP-CHINA</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>LA-MEX</fullName>
                </value>
                <value>
                    <fullName>LA-SA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NA-CAN</fullName>
                </value>
                <value>
                    <fullName>NA-US</fullName>
                    <default>true</default>
                    <label>NA-US</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SummaryReportMask__c</fullName>
        <description>Bit Mask Integer to define Period Summary Report settings to work with visual force page apex controller</description>
        <label>SummaryReportMask</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>